# docs/swagger.yaml
@@ -2,15 +2,19 @@ definitions:
   model.BaseResp:
     properties:
       code:
+        description: 结果码
         type: string
       msg:
+        description: 提示信息
         type: string
     type: object
   model.CreateStructReq:
     properties:
       comment:
+        description: 字段注释
         type: string
       fieldList:
+        description: 字段信息
         items:
           $ref: '#/definitions/model.Field'
         type: array
@@ -18,21 +22,25 @@ definitions:
   model.CreateStructResp:
     properties:
       code:
+        description: 结果码
         type: string
       id:
         description: 创建成功后的ID
         type: integer
       msg:
+        description: 提示信息
         type: string
     type: object
   model.DeleteStructResp:
     properties:
       code:
+        description: 结果码
         type: string
       id:
         description: 删除的结构体ID
         type: integer
       msg:
+        description: 提示信息
         type: string
     type: object
   model.Field:
@@ -59,6 +67,7 @@ definitions:
   model.GetStructListResp:
     properties:
       code:
+        description: 结果码
         type: string
       list:
         description: 结构体列表
@@ -66,16 +75,20 @@ definitions:
           $ref: '#/definitions/model.StructInfo'
         type: array
       msg:
+        description: 提示信息
         type: string
     type: object
   model.GetStructResp:
     properties:
       code:
+        description: 结果码
         type: string
       info:
         $ref: '#/definitions/model.StructInfo'
+        description: 结构体信息
         type: object
       msg:
+        description: 提示信息
         type: string
     type: object
   model.StructInfo:
@@ -109,21 +122,23 @@ definitions:
   model.UpdateStructResp:
     properties:
       code:
+        description: 结果码
         type: string
       id:
         description: 更新的结构体ID
         type: integer
       msg:
+        description: 提示信息
         type: string
     type: object
 info:
   contact:
     email: guoyueyang@126.com
-    name: guoyueyang
+    name: author guoyueyang
     url: http://www.amazingsaltedfish.com
-  description: this is amazing salted fish swagger api page.
+  description: this is [amazing salted fish] swagger api page.
   license:
-    name: MIT
+    name: License MIT
     url: https://spdx.org/licenses/MIT.html
   termsOfService: http://www.amazingsaltedfish.com
   title: Amazing Salted Fish API
@@ -153,8 +168,8 @@ paths:
             $ref: '#/definitions/model.BaseResp'
       summary: 新建一个结构信息
       tags:
-      - struct
-      - create
+      - 结构体信息
+      - 新建
     put:
       consumes:
       - application/json
@@ -178,8 +193,8 @@ paths:
             $ref: '#/definitions/model.BaseResp'
       summary: 更新一个结构信息
       tags:
-      - struct
-      - update
+      - 结构体信息
+      - 更新
   /{id}:
     delete:
       consumes:
@@ -203,8 +218,9 @@ paths:
             $ref: '#/definitions/model.BaseResp'
       summary: 删除一个结构信息
       tags:
-      - struct
-      - delete
+      - 结构体信息
+      - 删除
+  /detail/{id}:
     get:
       consumes:
       - application/json
@@ -227,8 +243,8 @@ paths:
             $ref: '#/definitions/model.BaseResp'
       summary: 获取一个结构信息
       tags:
-      - struct
-      - get
+      - 结构体信息
+      - 获取
   /list:
     get:
       consumes:
@@ -262,7 +278,7 @@ paths:
             $ref: '#/definitions/model.BaseResp'
       summary: 获取结构信息列表
       tags:
-      - struct
-      - get
-      - list
+      - 结构体信息
+      - 获取
+      - 列表
 swagger: "2.0"
